k3s-scripts/backend-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: backend
spec:
  replicas: 1
  selector:
    matchLabels:
      app: backend
  template:
    metadata:
      labels:
        app: backend
    spec:
      containers:
        - name: backend
          image: killuazoldyckk/mini-project-tracker-backend:dev
          imagePullPolicy: Always
          ports:
            - containerPort: 5000
